<resources>
    <string name="app_name">TodoButler</string>

    <!-- notification -->
    <string name="channel_name">Tasks</string>
    <string name="channel_description">Reminder and pinned tasks</string>

    <!-- add -->
    <string name="add_label">label</string>
    <string name="add_task">task</string>
    <string name="add_attachments">attachment</string>

    <!-- page names -->
    <string name="label">Label</string>
    <string name="tasks">Tasks</string>
    <string name="location">Location</string>
    <string name="attachments">Attachments</string>
    <string name="search">Search</string>
    <string name="tasks_from_label">Tasks from label</string>
    <string name="task_detail">Task detail</string>
    <string name="info_page">Info</string>

    <!-- empty -->
    <string name="empty_attachments">no attachments</string>
    <string name="empty_labels">no labels</string>
    <string name="empty_tasks">no tasks</string>
    <string name="empty_sub_tasks">no subtasks</string>
    <string name="empty_search">404 tasks not found :)</string>


    <!-- license -->
    <string name="aboutLibraries_description_text">
        TodoButler is a simple todo app. Feel free to contribute.
    </string>

    <string name="developer_title">Developer</string>
    <string name="developer">
        <div>
            Check out the code at GitHub:
            <a href="https://github.com/free-bots/TodoButler" title="TodoButler">https://github.com/free-bots/TodoButler</a>
        </div>
    </string>

    <string name="icons_title">Icons made by</string>
    <string name="icons_license">
        <div>Icons made by
            <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
            from
            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
        </div>
        <div> And Material Icons
            <a href="https://material.io/icons" title="Material Icons">Material Icons</a>
        </div>
    </string>


    <string name="label_info">Label info</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="choose">Choose</string>
    <string name="description">Description</string>
    <string name="reminder">Reminder</string>
    <string name="info">Info</string>
    <string name="pinned">Pinned</string>
    <string name="not_pinned">Not Pinned</string>
    <string name="color">Color</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="clone">Clone</string>
    <string name="attachment">Attachment</string>

    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="files">files</string>
    <string name="open">open</string>
    <string name="share">share</string>
    <string name="taskicons">taskicons</string>
    <string name="no_items_icon">no items icon</string>
</resources>
