<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/labelsFragment">

    <fragment
        android:id="@+id/labelsFragment"
        android:name="to.freebots.todobutler.fragments.LabelsFragment"
        android:label="@string/label"
        tools:layout="@layout/fragment_labels" >
        <action
            android:id="@+id/action_labelsFragment_to_tasksFromLabelFragment"
            app:destination="@id/tasksFromLabelFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_labelsFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_labelsFragment_to_searchTasksFragment"
            app:destination="@id/searchTasksFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/tasksFromLabelFragment"
        android:name="to.freebots.todobutler.fragments.TasksFromLabelFragment"
        android:label="@string/tasks_from_label"
        tools:layout="@layout/fragment_tasks_from_label" >
        <action
            android:id="@+id/action_tasksFromLabelFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_tasksFromLabelFragment_to_searchTasksFragment"
            app:destination="@id/searchTasksFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/taskFragment"
        android:name="to.freebots.todobutler.fragments.TaskFragment"
        android:label="@string/task_detail"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_taskFragment_self"
            app:destination="@id/taskFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_taskFragment_to_attachmentFragment"
            app:destination="@id/attachmentFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_taskFragment_to_locationFragment"
            app:destination="@id/locationFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/attachmentFragment"
        android:name="to.freebots.todobutler.fragments.AttachmentFragment"
        android:label="@string/attachments"
        tools:layout="@layout/fragment_attachment" />
    <fragment
        android:id="@+id/tasksFragment"
        android:name="to.freebots.todobutler.fragments.TasksFragment"
        android:label="@string/tasks" >
        <action
            android:id="@+id/action_tasksFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/searchTasksFragment"
        android:name="to.freebots.todobutler.fragments.SearchTasksFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_tasks" >
        <action
            android:id="@+id/action_searchTasksFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/locationFragment"
        android:name="to.freebots.todobutler.fragments.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location" />
</navigation>
